--- a/Weather-Forecast/app/src/main/res/layout/activity_main.xml
+++ b/Weather-Forecast/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="thearith.github.com.weatherforecast.MainActivity">
+    android:layout_marginLeft="@dimen/item_padding"
+    android:layout_marginRight="@dimen/item_padding"
+    tools:context="thearith.github.com.weatherforecast.view.activities.main.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rc_fetchWeather"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-</LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
