--- a/Weather-Forecast/app/src/main/res/layout/item_weather.xml
+++ b/Weather-Forecast/app/src/main/res/layout/item_weather.xml
@@ -16,11 +16,22 @@
         android:layout_marginEnd="@dimen/item_spacing_large"/>
 
     <TextView
+        android:id="@+id/tv_weather_degrees"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:layout_marginStart="@dimen/item_spacing_large"
+        android:text="12° - 15°"/>
+
+    <TextView
         android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:layout_toEndOf="@id/weather_icon"
+        android:layout_toStartOf="@id/tv_weather_degrees"
         android:layout_marginBottom="@dimen/item_spacing_medium"
         android:text="Tomorrow"/>
 
@@ -30,17 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/weather_icon"
         android:layout_below="@id/tv_date"
+        android:layout_toStartOf="@id/tv_weather_degrees"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:text="cloudy"/>
-
-    <TextView
-        android:id="@+id/tv_weather_degrees"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:text="12° - 15°"/>
 
 
 </RelativeLayout>
