--- a/Weather-Forecast/app/src/main/res/layout/item_weather.xml
+++ b/Weather-Forecast/app/src/main/res/layout/item_weather.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/item_padding"
-    android:paddingTop="@dimen/item_padding">
+    android:paddingBottom="@dimen/item_padding_vertical"
+    android:paddingTop="@dimen/item_padding_vertical">
     
     <thearith.github.com.weatherforecast.view.custom.SkyConView
         android:id="@+id/weather_icon"
@@ -29,10 +29,10 @@
         android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:layout_toEndOf="@id/weather_icon"
         android:layout_toStartOf="@id/tv_weather_degrees"
-        android:layout_marginBottom="@dimen/item_spacing_medium"
+        android:layout_marginBottom="@dimen/item_spacing_small"
         android:text="Tomorrow"/>
 
     <TextView
@@ -42,7 +42,7 @@
         android:layout_toEndOf="@id/weather_icon"
         android:layout_below="@id/tv_date"
         android:layout_toStartOf="@id/tv_weather_degrees"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:text="cloudy"/>
 
 
