--- a/Weather-Forecast/app/src/main/res/layout/activity_details.xml
+++ b/Weather-Forecast/app/src/main/res/layout/activity_details.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:layout_marginBottom="@dimen/spacing_medium"/>
+        android:layout_marginBottom="@dimen/spacing_large"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
